--- a/shop/src/main/resources/templates/fragments/shopitems.html
+++ b/shop/src/main/resources/templates/fragments/shopitems.html
@@ -15,24 +15,28 @@
 
   <div class="row">
 
-    <div class="col-md-4" th:each="shopitem : ${shopitems}">
-      <div class="card mb-4">
-        <div class="card-body">
-          <h5 class="card-title" th:text="${shopitem.id}"></h5>
-          <h5 class="card-title" th:text="${shopitem.name}"></h5>
-          <span class="card-text" th:text="|£ ${shopitem.price}|"></span>
+    <form action="#" th:action="@{/selectitem}" method="post">
+      <div class="col-md-4" th:each="shopitem : ${shopitems}">
+        <div class="card mb-4">
+          <div class="card-body">
+
+            <h5 class="card-title" th:text="${shopitem.name}"></h5>
+            <span class="card-text" th:text="|£ ${shopitem.price}|"></span>
+
+            <br>
+            <button name="item" th:value="${shopitem.id}" type="submit">Add to cart</button>
+
+            <!--          <h5 class="card-title" th:text="${shopitem.id}"></h5>-->
+          </div>
         </div>
       </div>
-    </div>
+    </form>
 
 
   </div>
 
-  <h1>Select item</h1>
+  <h1>Add item</h1>
   <form action="#" th:action="@{/shopitems}" method="post" th:object="${pickeditem}">
-    <label>Id:</label>
-    <input type="number" th:field="*{id}"/><br/>
-
     <label>Name:</label>
     <input type="text" th:field="*{name}"/><br/>
 
