--- a/shop/src/main/resources/templates/fragments/main.html
+++ b/shop/src/main/resources/templates/fragments/main.html
@@ -12,6 +12,14 @@
         </div>
     </div>
 
+    <div class="album py-5 bg-light">
+        <div class="container">
+
+            <div th:insert="fragments/cartitems.html :: cartitems"></div>
+
+        </div>
+    </div>
+
 </main>
 
 </body>
