Now handling price message

--- a/shop/src/main/resources/templates/cart.html
+++ b/shop/src/main/resources/templates/cart.html
@@ -14,6 +14,8 @@
     <div class="container">
 
         <div th:insert="fragments/cartitems.html :: cartitems"></div>
+        <div th:insert="fragments/price.html :: price"></div>
+<!--        <h5 class="card-title" th:text="${price.getTotalPrice()}"></h5>-->
 
     </div>
 </div>
